# org-structure-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: exceptions.py  main.py
app/api/: deps.py  exception_handlers.py
app/api/v1/: departments.py
app/core/: config.py  database.py  logging.py
app/models/: department.py  employee.py
app/repositories/: department.py  employee.py
app/schemas/: department.py  employee.py
app/services/: department.py  employee.py
tests/: conftest.py  test_departments.py  test_employees.py
